--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:background="@color/colorWhite"
-    tools:context="ru.myitschool.navigation.MainActivity">
+    tools:context="ru.myitschool.pcdesigner.MainMenu">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
