--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,11 +6,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="ru.myitschool.navigation.MainActivity"
+    tools:context="ru.myitschool.pcdesigner.MainMenu"
     tools:showIn="@layout/app_bar_main">
 
-    <android.support.v7.widget.ListViewCompat
+    <TextView
+        android:text=""
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorBlack"
+        android:textSize="20sp"
+        android:gravity="center_vertical"
+        android:padding="15dp"
+        android:id="@+id/topText" />
+
+    <ListView
         android:id="@+id/main_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_below="@+id/topText"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
