--- a/app/src/main/res/layout/item_main_list_view_menu.xml
+++ b/app/src/main/res/layout/item_main_list_view_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="4dp">
@@ -11,7 +12,8 @@
         android:src="@mipmap/cpu"
         android:gravity="center_vertical"
         android:padding="7dp"
-        android:background="@drawable/background_main_list_left" />
+        android:background="@drawable/background_main_list_left"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:text=""
